--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 </head>
 
 <body>
-    <h1>Este es el itulo del BlockPoust</h1>
-    <p>Todo puede pasar</p>
+    <div class="container">
+        <h1>Este es el itulo del BlockPoust</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, est praesentium. Dolorem non incidunt
+            velit minima quia. Ad odit quae voluptatum nostrum, dignissimos velit tenetur voluptatem laudantium quo! A,
+            deserunt.</p>
+    </div>
+
 </body>
 
 </html>
