--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 
     <div class="container">
-        <header>Este es el inico de la cabeceta</header>
+        <header>
+            <h1>Este es la cabecera</h1>
+        </header>
         <h1>Este es el itulo del BlockPoust</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, est praesentium. Dolorem non incidunt
             velit minima quia. Ad odit quae voluptatum nostrum, dignissimos velit tenetur voluptatem laudantium quo! A,
