Agrgado el cont adicional del log

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, est praesentium. Dolorem non incidunt
             velit minima quia. Ad odit quae voluptatum nostrum, dignissimos velit tenetur voluptatem laudantium quo! A,
             deserunt.</p>
+        <p>Estoy apendiendo git, estoy seguro que estos conosimientos atudaran a cumplir mis sueños
+            y a mejorar mi vida personal y laboral
+        </p>
     </div>
 
 </body>
