Final de la cabeza

--- a/index.html
+++ b/index.html
@@ -9,20 +9,17 @@
 </head>
 
 <body>
-
     <div class="container">
-        <header>
+        <div class="header">
             <h1>Este es la cabecera</h1>
-        </header>
+        </div>
         <h1>Este es el itulo del BlockPoust</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, est praesentium. Dolorem non incidunt
-            velit minima quia. Ad odit quae voluptatum nostrum, dignissimos velit tenetur voluptatem laudantium quo! A,
+        <p>Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit. Incidunt,
+            est praesentium. Dolorem non incidunt velit minima quia. Ad odit quae voluptatum nostrum,
+            dignissimos velit tenetur voluptatem laudantium quo ! A,
             deserunt.</p>
-        <p>Estoy apendiendo git, estoy seguro que estos conosimientos atudaran a cumplir mis sueños
-            y a mejorar mi vida personal y laboral
-        </p>
     </div>
-
 </body>
 
 </html>
