Arreglo del parrafo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
             consectetur adipisicing elit. Incidunt,
             est praesentium. Dolorem non incidunt velit minima quia. Ad odit quae voluptatum nostrum,
             dignissimos velit tenetur voluptatem laudantium quo ! A,
-            deserunt.</p>
+            deserunt.
+        </p>
+        <p>
+            Estoy aprendiendo git, una tecnologia que permite controlar las veriones del proyecto,
+            asi se puede viajar al pasado, es decir, recuperar los cambios echos en una vercion anterior,
+            esto es de gran utilidad porque permite recuperar cambios echos en el pasado.
+        </p>
     </div>
 </body>
 
