--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             est praesentium. Dolorem non incidunt velit minima quia. Ad odit quae voluptatum nostrum,
             dignissimos velit tenetur voluptatem laudantium quo ! A,
             deserunt.</p>
+        <footer>
+            <h4>Este es el pie de pagina</h4>
+        </footer>
     </div>
 </body>
 
