--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="container">
         <div class="header">
             <h1>Este es la cabecera</h1>
+            <h2>sub titulo</h2>
         </div>
         <h1>Este es el itulo del BlockPoust</h1>
         <p>Lorem ipsum dolor sit amet,
