--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>BlocPoust</title>
 </head>
 
 <body>
     <div class="container">
         <div class="header">
-            <h1>Este es la cabecera</h1>
-            <h2>sub titulo</h2>
+            <h1>Titulo de un exelente bloc</h1>
         </div>
         <h1>Este es el itulo del BlockPoust</h1>
         <p>Lorem ipsum dolor sit amet,
