--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             amet?
         </p>
         <footer>
-            <h4>Este es el pie de pagina</h4>
+            <h4>Este es el footer de pagina</h4>
+            <p>Y de la empreza</p>
         </footer>
     </div>
 </body>
