--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="header">
             <h1>Titulo de un exelente bloc</h1>
         </div>
-        <h1>Este es el itulo del BlockPoust</h1>
+        <h1>Este es el titulo del BlockPoust</h1>
         <p>Lorem ipsum dolor sit amet,
             consectetur adipisicing elit. Incidunt,
             est praesentium. Dolorem non incidunt velit minima quia. Ad odit quae voluptatum nostrum,
